--- a/src/test/resources/spring-cloud-bootstrap.properties
+++ b/src/test/resources/spring-cloud-bootstrap.properties
@@ -1,5 +1,5 @@
 #
-# Spring Cloud Connectors spring-cloud-localconfig settings.
+# Spring Cloud Connectors spring-cloud-localconfig settings for testing.
 #
 # Either a relative or absolute file path is required here, or you can set the path to the
 # properties file as a system property in your JVM launch.
