--- a/src/test/resources/spring-cloud-local.properties
+++ b/src/test/resources/spring-cloud-local.properties
@@ -1,2 +1,6 @@
+#
+# Spring Cloud Connectors spring-cloud-localconfig settings for testing.
+# The first line creates an app id, the second line creates a "springdays" cloud service.
+#
 spring.cloud.appId: spring-days-demo
 spring.cloud.springdays: mongodb://localhost/springdays
